--- a/css/styles.css
+++ b/css/styles.css
@@ -478,6 +478,28 @@ ul.social-buttons li a {
   width: 100%;
   height: 100%;
 }
+#call-wrapper #call-jitsi{
+  opacity: 0;
+  transition: opacity 300 ease;
+}
+#call-wrapper #call-jitsi.joined{
+  opacity: 1;
+}
+@media (min-width: 576px) {
+
+}
+@media (min-width: 768px) {
+
+}
+@media (min-width: 992px) {
+
+}
+@media (min-width: 1200px) {
+
+}
+@media (min-width: 1400px) {
+
+}
 
 #download .badges .badge-link {
   display: inline;
