--- a/css/styles.css
+++ b/css/styles.css
@@ -163,6 +163,26 @@ img::-moz-selection {
 }
 @media (min-width: 992px) {
   .circle{
+    width: 300px;
+    height: 300px;
+    top: calc(50% - 150px);
+    left: calc(50% - 150px);
+  }
+  .circle:nth-child(2){
+    width: 300px;
+    height: 300px;
+    top: calc(50% - 150px);
+    left: calc(50% - 150px);
+  }
+  .btn-call{
+    width: 290px;
+    height: 290px;
+    top: calc(50% - 145px);
+    left: calc(50% - 145px);
+  }
+}
+@media (min-width: 1440px) {
+  .circle{
     width: 360px;
     height: 360px;
     top: calc(50% - 180px);
@@ -477,28 +497,6 @@ ul.social-buttons li a {
 #video{
   width: 100%;
   height: 100%;
-}
-#call-wrapper #call-jitsi{
-  opacity: 0;
-  transition: opacity 300 ease;
-}
-#call-wrapper #call-jitsi.joined{
-  opacity: 1;
-}
-@media (min-width: 576px) {
-
-}
-@media (min-width: 768px) {
-
-}
-@media (min-width: 992px) {
-
-}
-@media (min-width: 1200px) {
-
-}
-@media (min-width: 1400px) {
-
 }
 
 #download .badges .badge-link {
